2021-05-02  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (polyglossia.4ht, tuenc-xetex-input.4ht): 2021.
	(aa.4ht): \write version.

2021-04-30  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht): added special group in order
	to support subscripts in upright Greek characters.
	https://tex.stackexchange.com/a/595005/2891
	* tex4ht-mathml.tex (mathml.4ht): added special group to
	\math<xx> commands, in order to support their use in subscripts
	and superscripts without extra groups in TeX documents.
	* tex4ht-4ht.tex (beamer.4ht),
	tex4ht-html4.tex (html4.4ht): modernized Beamer support.

2021-04-29  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht): keep some Greek characters upright.
	https://tex.stackexchange.com/a/595005/2891

2021-04-27  Karl Berry  <karl@freefriends.org>

	* Makefile (inst-check-files): new target.

2021-04-27  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (hyperref.4ht): fixed issues with nameref when
	hyperref was loaded from class files.
	https://puszcza.gnu.org.ua/bugs/index.php?508

2021-04-25  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (babel.4ht, latex.4ht, lfeenc.4ht, plain.4ht,
	polyglossia.4ht, tuenc-xetex-input.4ht): use \ht:special instead of
	\special.
	* tex4ht-4ht.tex (latex.4ht, plain.4ht): \:nbsp should output
	nonbreaking space inside picture.
	* tex4ht-html4.tex (html4.4ht): test for \Picture inside \a:HChar.
	* tex4ht-unicode.tex (unicode.4ht): use correct definition of \:nbsp.
	* tex4ht-html4.tex (html4.4ht): use \:nbsp in listings configurations.
	* tex4ht-4ht.tex (listings.4ht): fixed configurations in order to
	support \Picture*. (Thanks to Linas Stonys).

2021-04-22  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (listings.4ht): insert closing b:lstlinline
	configuration really after group. (Thanks to Linas Stonys).
	* tex4ht-html4.tex (html4.4ht): add newlines after <br /> tags in
	listings environment.
